# vse-zapchasti

./: .archiveignore  .env.prod.example  .gitignore  .tool-versions  AGENTS.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json
apps/api/: .dockerignore  .env.example  .env.prod.example  Dockerfile  Makefile  README.md  alembic.ini  database.py  main.py  models.py  mypy.ini  notifications.py  pyproject.toml  schemas.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 074c5780a9da_initial_models.py  1e6d6fcf131e_merge_heads_after_service_requests_.py  29581caf54af_add_site_content_table.py  4e8b0b5b6b3c_add_manager_comment_to_leads.py  5d2f4d8f7f1a_add_import_runs_table.py  6c1f229dd1d7_add_operator_comment_to_service_requests.py  7a8a6d21d5f2_add_products_fts_index.py  9c7e5a4b2d11_add_installation_bundle_fields_to_service_requests.py  a1b2c3d4e5f6_add_invoice_requisites_to_orders.py  a6f9c8d2e4b1_add_payment_flow_fields.py  b9d82df0af11_add_vin_requests_table.py  b9f16e3f87aa_add_service_catalog_items.py  c4d2a1b9e8f0_add_service_requests_operator_comment.py  d12f4a6b9c33_add_prepayment_fields_to_service_catalog.py  e4b2fa8c3d9a_add_consent_audit_fields.py  f3a19c2e7b44_add_orders_tables.py  f6e2c1a9b7d3_add_vehicle_engine_to_service_requests.py
apps/api/routers/: admin.py  public.py
apps/api/tests/: test_critical_flows.py  test_hypothesis_phone.py
apps/api/tests/load/: locustfile.py
docs/: OPERATIONS.md  README.md  ai-project-checklist-assessment-2026-03-09.md  assets-sources.md  audit-closure-2026-03-09.md  backup.sh  chat-context.md  customer-go-live-pack-2026-03-10.md  customer-production-metadata-form-2026-03-09.md  deploy.md  design-system.md  handoff.sh  pre-release-checklist-2026-03-10.md  production-metadata-draft-2026-03-09.md  production-metadata-template-2026-03-09.md  project-handoff-2026-03-09.md  project-header.md  project-state.md  release-rollback-runbook.md  (+8 more)
(+125 files in other folders)
